# riofs

./: .gitignore  README.md  configure.ac  riofs.conf.xml  riofs.rb
include/: Makefile.am  awsv4.h  conf_keys.h  global.h  http_connection.h  urltools.h  utils.h
src/: Makefile.am  awsv4.c  file_io_ops.c  http_connection.c  main.c  urltools.c  utils.c
tests/: Makefile.am  awsv4_test.c
