include_HEADERS = $(abs_srcdir)/global.h
include_HEADERS += $(abs_srcdir)/log.h
include_HEADERS += $(abs_srcdir)/conf.h
include_HEADERS += $(abs_srcdir)/awsv4.h
include_HEADERS += $(abs_srcdir)/urltools.h
include_HEADERS += $(abs_srcdir)/dir_tree.h 
include_HEADERS += $(abs_srcdir)/client_pool.h
include_HEADERS += $(abs_srcdir)/rfuse.h
include_HEADERS += $(abs_srcdir)/http_connection.h
include_HEADERS += $(abs_srcdir)/file_io_ops.h
include_HEADERS += $(abs_srcdir)/cache_mng.h
include_HEADERS += $(abs_srcdir)/stat_srv.h
include_HEADERS += $(abs_srcdir)/range.h
include_HEADERS += $(abs_srcdir)/utils.h
include_HEADERS += $(abs_srcdir)/conf_keys.h
